--- a/src/partials/file.html
+++ b/src/partials/file.html
@@ -9,13 +9,13 @@
 
             <ul class="dropdown-menu">
                 <li>
-                    <button id="file-download-texture" type="button" class="dropdown-item">Texture</button>
+                    <button id="file-download-texture" type="button" class="dropdown-item">Texture (.png)</button>
                 </li>
                 <li>
-                    <button id="file-download-xml" type="button" class="dropdown-item">XML data</button>
+                    <button id="file-download-xml" type="button" class="dropdown-item">FNT data (.xml)</button>
                 </li>
                 <li>
-                    <button id="file-download-zip" type="button" class="dropdown-item">Zip</button>
+                    <button id="file-download-zip" type="button" class="dropdown-item">All (.zip)</button>
                 </li>
             </ul>
         </div>
