--- a/src/partials/fonts.html
+++ b/src/partials/fonts.html
@@ -14,18 +14,25 @@
                 </select>
             </div>
 
-            <!--div class="input-group">
-                <input type="file" class="form-control" aria-describedby="filesLabel"
-                       accept=".ttf"
-                       id="font-file-inp"/>
-                <label class="input-group-text" for="font-file-inp">Font file</label>
-            </div>
-            <small id="font-name" class="float-end mt-1 d-none"></small-->
-
             <div class="input-group mt-3">
                 <span id="font-size-desc" class="input-group-text">Font size</span>
                 <input id="font-size-inp" class="form-control" type="number" step="1" min="5" max="800" value="32"
                        aria-label="Font size" aria-describedby="font-size-desc">
+            </div>
+
+            <div class="form-check form-switch mt-3">
+                <input id="font-italic-chk" type="checkbox" class="form-check-input" role="switch">
+                <label class="form-check-label" for="font-italic-chk">Italic</label>
+            </div>
+
+            <div class="form-check form-switch mt-3">
+                <input id="font-bold-chk" type="checkbox" class="form-check-input" role="switch">
+                <label class="form-check-label" for="font-bold-chk">Bold</label>
+            </div>
+
+            <div class="form-check form-switch mt-3">
+                <input id="font-small-caps-chk" type="checkbox" class="form-check-input" role="switch">
+                <label class="form-check-label" for="font-small-caps-chk">Small-caps</label>
             </div>
         </div>
     </div>
