Added font-parser.js (a copy of PIXI.BitmapFont.from) to fix texture issues

--- a/src/partials/shadow.html
+++ b/src/partials/shadow.html
@@ -9,7 +9,7 @@
          data-bs-parent="#options-acc">
         <div class="accordion-body">
             <div class="form-check form-switch">
-                <input id="shadow-chk" type="checkbox" class="form-check-input" role="switch">
+                <input id="shadow-chk" type="checkbox" class="form-check-input" role="switch" checked>
                 <label class="form-check-label" for="shadow-chk">Enable</label>
             </div>
 
